New settings + extract about page content as setting property + simplify existing code